--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "react-hot-loader": "next",
     "webpack": "^2.2",
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
